# cr_cpu_sim

./: .gitignore  Cargo.toml  README.md  instructions.md
cr_cpu_assembler/: Cargo.toml
cr_cpu_assembler/src/: main.rs  program_file.rs  program_instruction.rs
cr_cpu_common/: Cargo.toml
cr_cpu_common/src/: constants.rs  cpu.rs  instruction.rs  lib.rs
cr_cpu_common/tests/: cpu_tests.rs
cr_cpu_common/tests/snapshots/: cpu_tests__cpu_add-2.snap  cpu_tests__cpu_add-3.snap  cpu_tests__cpu_add-4.snap  cpu_tests__cpu_add.snap  cpu_tests__cpu_iadd-2.snap  cpu_tests__cpu_iadd-3.snap  cpu_tests__cpu_iadd.snap  cpu_tests__cpu_imovel-2.snap  cpu_tests__cpu_imovel-3.snap  cpu_tests__cpu_imovel.snap  cpu_tests__cpu_push-4.snap  cpu_tests__cpu_push.snap  cpu_tests__cpu_push_pop-2.snap  cpu_tests__cpu_push_pop-3.snap  cpu_tests__cpu_push_pop-4.snap  cpu_tests__cpu_push_pop-5.snap  cpu_tests__cpu_push_pop-6.snap  cpu_tests__cpu_push_pop-7.snap  cpu_tests__cpu_push_pop-8.snap  cpu_tests__cpu_push_pop-9.snap  cpu_tests__cpu_storevr-2.snap.new  cpu_tests__cpu_storevr-3.snap  cpu_tests__cpu_storevr-4.snap  cpu_tests__cpu_storevr-7.snap
cr_cpu_emu/: Cargo.toml
cr_cpu_emu/src/: constants.rs  cpu.rs  instruction.rs  main.rs
