[package]
name = "cr_cpu_common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml","serde"] }
serde = { version = "1.0.190", features = ["derive"]}
serde_yaml = "0.9.27"

