[package]
name = "cr_cpu_emu"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cr_cpu_common = { path = "../cr_cpu_common" }
pixels = "0.13.0"
winit = "0.28.7"
winit_input_helper = "0.14.1"
env_logger = "0.10.0"
log = "0.4.20"